<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/main_scene"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fl_top_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/cl_radius_bottom_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/circleImageView"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/upcoming_events"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/fl_top_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/portre"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView" />

    <LinearLayout
        android:id="@+id/ll_day_tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/fl_top_layout"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fl_radius_dark_blue"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textColor="@color/cream"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/fl_radius_cream"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textColor="@color/dark_blue"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/fl_radius_cream"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textColor="@color/dark_blue"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/fl_radius_cream"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textColor="@color/dark_blue"
                android:textSize="12sp" />

        </FrameLayout>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/iv_interested_event_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_top_layout"
        app:navGraph="@navigation/nav_graph" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_interested_event_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/lamp"
        app:layout_constraintBottom_toTopOf="@id/cl_interested_events"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_interested_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/interested_events"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_interested_event_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_interested_event_icon" />

    <TextView
        android:id="@+id/tv_interested_events_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/interested_events_desc"
        android:textColor="@color/dark_blue"
        android:textSize="12sp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/iv_interested_event_icon"
        app:layout_constraintStart_toEndOf="@+id/iv_interested_event_icon" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_interested_events"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_event2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@drawable/cl_radius_top_right_light">

            <TextView
                android:id="@+id/tv_event2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="2"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/tv_event2"
                app:layout_constraintStart_toEndOf="@+id/tv_event2"
                app:layout_constraintTop_toTopOf="@+id/tv_event2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/ben_howard"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/date"
                    android:textColor="@color/dark_blue"
                    android:textSize="12sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_event1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:alpha="1"
            android:background="@drawable/cl_radius_top_right"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_event1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="1"
                android:textColor="@color/dark_blue"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/tv_event1"
                app:layout_constraintStart_toEndOf="@+id/tv_event1"
                app:layout_constraintTop_toTopOf="@+id/tv_event1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/blackpink"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/date"
                    android:textColor="@color/dark_blue"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>