<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:transitionName="eventDetailTransition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cl_radius_top_left"/>

    <TextView
        android:id="@+id/tv_event_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_desc"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_event_desc_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/event_desc_content"
        android:textColor="@color/dark_blue"
        android:textSize="13sp"
        android:lineSpacingExtra="8sp"
        app:layout_constraintStart_toStartOf="@+id/tv_event_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_desc"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_event_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/event_details"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_event_desc_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_desc_content" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fl_radius_cream_light"
        app:layout_constraintStart_toStartOf="@+id/tv_event_details"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_details" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/event_item_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/fl_radius_top_left"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:background="@drawable/event_heart_layout"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_heart_empty_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="80"
                android:textColor="@color/dark_blue"
                android:textSize="14sp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interested_in_attending"
            android:textColor="@color/cream"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>