<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_event_item"
    android:layout_width="160dp"
    android:layout_height="220dp"
    android:layout_marginEnd="40dp"
    android:clickable="true"
    android:focusable="true"
    app:layoutDescription="@xml/list_item_event_scene">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/fl_radius_cream_20dp"
        app:layoutDescription="@xml/list_item_event_container_scene">

        <ImageView
            android:id="@+id/iv_clock"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_clock_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="10:00 AM"
            android:textColor="@color/dark_blue"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_clock"
            app:layout_constraintStart_toEndOf="@+id/iv_clock"
            app:layout_constraintTop_toTopOf="@+id/iv_clock" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/name"
            android:textColor="@color/dark_blue"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_clock" />

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_location_24"
            app:layout_constraintBottom_toTopOf="@+id/event_item_bottom_layout"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/utah"
            android:textColor="@color/dark_blue"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_location"
            app:layout_constraintStart_toEndOf="@+id/iv_location"
            app:layout_constraintTop_toTopOf="@+id/iv_location" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/event_item_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/fl_raidus_only_botttom_blue"
            android:padding="5dp"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/event_heart_layout"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_heart_empty_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="80"
                    android:textColor="@color/dark_blue"
                    android:textSize="10sp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interested"
                android:textColor="@color/cream"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>